# wizsearch

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  ROADMAP.md  SEARCH_AND_UI.md  SECURITY.md  SETTINGS.md  SIDECARS.md  SOURCES.md  TESTING.md
scripts/: check_source_purity.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql
src-tauri/sidecars/: manifest.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/collection/: mod.rs
src-tauri/src/preview/: ffmpeg.rs  mod.rs  server.rs
src-tauri/src/search/: mod.rs  rate_limit.rs
src-tauri/src/security/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/sidecars/: mod.rs
src-tauri/src/sources/: giphy.rs  imgflip.rs  imgur.rs  klipy.rs  kym.rs  mod.rs  myinstants.rs  pexels.rs  reddit.rs  tenor.rs  ytsearch.rs
src-tauri/tests/: source_purity.rs
src/api/: commands.ts  dragIcon.ts  stream.ts  types.ts
src/collection/: CollectionView.tsx
src/grid/: SearchView.tsx
src/grid/tiles/: ResultTile.tsx
src/preview/: audioBus.ts
src/settings/: SettingsView.tsx  useSettings.tsx
