[package]
name = "wizsearch"
version = "0.1.0"
description = "Local-first desktop meme asset discovery"
authors = ["Cole"]
license = "MIT"
repository = "https://github.com/Colewiz7/wizsearch"
edition = "2021"

[lib]
name = "wizsearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-drag = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "time", "sync", "io-util"] }

# host-only IO. sources/ must never import these (enforced by tests/source_purity.rs)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# OS keychain: Secret Service on Linux, Credential Manager on Windows. NEVER Stronghold.
keyring = { version = "3", features = ["windows-native", "async-secret-service", "crypto-rust", "tokio"] }

scraper = "0.21"
url = "2"
percent-encoding = "2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
http = "1"
mime_guess = "2"
log = "0.4"
tauri-plugin-log = "2"

# sidecar archive extraction
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
